# LBS

./: .gitignore  CMakeLists.txt  README.md  makeProto.sh  message.proto
geo/: CMakeLists.txt  geointerface.cpp
include/: clientinfo.h  geointerface.h  lbsserver.h  message.pb.h  nocopy.h  process.h  task.h  threadpool.h  until.h
log/: error_20170618-212039.68294  info_20170618-212019.68286  info_20170618-212036.68294  warning_20170618-212022.68286
src/: CMakeLists.txt  clientinfo.cpp  lbsserver.cpp  task.cpp  until.cpp
test/: CMakeLists.txt  client.cpp  message.pb.cc  server.cpp  unit_test.cpp
